--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 </head>
 <body>
+	<img src="wizard_shockpulse_large.png" alt="">
 <h1>Coming soon... le wagon</h1>
 </body>
 </html>
