center image and tagline

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Git Sprint</title>
 </head>
 <body>
-	<img src="wizard_shockpulse_large.png" alt="">
+	<div id="container">
+	<img id="logo" src="wizard_shockpulse_large.png" alt="">
 <h1>Coming soon... le wagon</h1>
+</div> 
 </body>
 </html>
